Added Code to make the Server serve de client React Application
Signed-off-by: Tin Chu <me@tinho.co>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,14 @@ services:
       - ./data/mongo/db:/data/db
     environment:
       MONGO_INITDB_DATABASE: onspace_emaildb
-  client:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./client
-    volumes:
-      - /app/node_modules
-      - ./client:/app
   server:
     build:
       dockerfile: Dockerfile.dev
       context: ./server
+    ports:
+      - 5000:5000
+      - 3000:3000
     volumes:
-      - /app/node_moduless
+      - /app/node_modules
+      - /app/client/node_modules
       - ./server:/app
